--- a/conda-environments/DEEPLABCUT.yaml
+++ b/conda-environments/DEEPLABCUT.yaml
@@ -15,7 +15,7 @@
 #
 # install: conda env create -f DEEPLABCUT.yaml
 # update:  conda env update -f DEEPLABCUT.yaml
-name: DEEPLABCUT
+name: DEEPLABCUT-FORK
 channels:
   - conda-forge
   - defaults
